# ISAP-works

./: .gitmodules  CMakeLists.txt  README.md  curve_test.cpp  main.cpp  my_curves.cpp  my_curves.hpp  sha3_test.cpp
Builds/Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  PAZI_Jacobi_intersections.cbp  build.ninja  cmake_install.cmake  make-dist-0.8.4.sh  make-uninstall-0.8.4.sh
Builds/Debug/.cmake/api/v1/reply/: cache-v2-d1b999cac9a9687f56bc.json  cmakeFiles-v1-79e2d89fc1781d7a9715.json  codemodel-v2-24a181a3f6d58f26d0e6.json  index-2020-10-28T17-17-48-0796.json  target-PAZI_Jacobi_intersections-975c6cf846c750895e31.json  target-akrypt-shared-03c43adb8662ac264b5f.json  target-akrypt-static-0fae9e249d73ecc09a64.json  target-aktool-b91f1d3a02d741b2e6b2.json  target-dist-a3476bcda86e15276b42.json  target-example-hello-8d72393ddbe1ec67568d.json  target-example-icode-ab05e019302444ea12cb.json  target-example-ini-6c8f8741d3e73cf11dae.json  target-example-log-a652ae3e93b11f539e56.json  target-example-oid-7f8393fc585988f7a40b.json  target-uninstall-1fc05505943c120e0010.json
Builds/Debug/libakrypt-0.x/: aktool  cmake_install.cmake  example-hello  example-icode  example-ini  example-log  example-oid  libakrypt-0.8.4.cbp  libakrypt.so.0.8  libakrypt.so.0.8.4
Builds/Release/: CMakeCache.txt  PAZI_Jacobi_intersections.cbp  build.ninja  cmake_install.cmake
Builds/Release/.cmake/api/v1/reply/: cache-v2-3ec292bfd671645db077.json  cmakeFiles-v1-0efed76dbd469080595c.json  codemodel-v2-2eeaf927964939b2ab24.json  index-2020-10-22T17-50-48-0945.json  (+1 more)
